@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: tclsh.1,v 1.8.4.5 2008/10/17 20:52:23 dgp Exp $
+'\" RCS: @(#) $Id: tclsh.1,v 1.8.4.6 2009/03/26 13:28:00 dgp Exp $
 '\" 
 .so man.macros
 .TH tclsh 1 "" Tcl "Tcl Applications"
@@ -75,7 +75,7 @@ following three lines:
 .CS
 \fB#!/bin/sh
 # the next line restarts using tclsh \e
-exec tclsh "$0" "$@"\fR
+exec tclsh "$0" ${1+"$@"}\fR
 .CE
 .PP
 This approach has three advantages over the approach in the previous
